fixe whitespace

--- a/canvas_modules/common-canvas/src/toolbar/toolbar.scss
+++ b/canvas_modules/common-canvas/src/toolbar/toolbar.scss
@@ -111,7 +111,6 @@ $toolbar-divider-width: 1px;
 	background-color: $ui-01;
 	display: inline-block;
 	& button {
-		padding:0;
 		height: $toolbar-button-height;
 		min-height: 30px;
 		background-color: $ui-01;
